@@ -1,3 +1,7 @@
+2004-03-05  ujwal
+	
+	* Made option key setting part of keyboard profile.
+
 2004-03-04  ujwal
 
 	* Fixed "Send Inout to All Tabs" and "Paste".
